--- a/app/src/main/res/layout/activity_scroller.xml
+++ b/app/src/main/res/layout/activity_scroller.xml
@@ -5,38 +5,54 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Scroller">
-    <LinearLayout
+
+    <TextView
+        android:id="@+id/story_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginLeft="1dp"
+        android:layout_marginTop="5dp"
+        android:padding="7dp"
+        android:text="@string/story_title"
+        android:textColor="#000"
+        android:textSize="23sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/change_font"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:background="@color/colorPrimaryDark"
+        android:padding="8dp"
+        android:text="@string/color_change"
+        android:textColor="#fff"
+        android:onClick="change_font"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/story_title" />
+
+    <ScrollView
+        android:id="@+id/linearLayout2"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@+id/change_font">
+
+
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/story_textView"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/story_title"
-            android:textStyle="bold"
             android:padding="7dp"
-            android:textColor="#000"
-            android:textSize="23sp"
-            android:layout_margin="7dp"/>
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:text="@string/story_content"
+            android:textSize="16sp"
+            tools:text="Sample Text" />
 
-            <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/story_content"
-                    android:padding="7dp"
-                    android:layout_margin="7dp"
-                    android:textSize="16sp"/>
-
-            </LinearLayout>
-
-        </ScrollView>
-    </LinearLayout>
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
