--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -8,7 +8,7 @@
     tools:layout_editor_absoluteY="73dp">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/first_button"
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_gravity="start"
@@ -42,10 +42,10 @@
         android:textColor="#fff"
         android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
-        app:layout_constraintEnd_toEndOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="@+id/first_button"
         app:layout_constraintHorizontal_bias="0.339"
-        app:layout_constraintStart_toStartOf="@+id/button"
-        app:layout_constraintTop_toBottomOf="@+id/button"
+        app:layout_constraintStart_toStartOf="@+id/first_button"
+        app:layout_constraintTop_toBottomOf="@+id/first_button"
         app:layout_constraintVertical_bias="0.495" />
 
     <TextView
