--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -12,20 +12,20 @@
         android:layout_width="wrap_content"
         android:layout_height="50dp"
         android:layout_gravity="start"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="80dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
+        android:layout_margin="15dp"
         android:background="@color/colorPrimaryDark"
         android:onClick="sayHello"
         android:padding="10dp"
         android:text="@string/first_button"
-        android:textSize="12sp"
         android:textColor="#fff"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@id/button2"
         app:layout_constraintEnd_toStartOf="@+id/textView"
-        app:layout_constraintHorizontal_bias="0.368"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintHorizontal_bias="0"
+        app:layout_constraintVertical_bias="0"
+        />
 
 
     <Button
@@ -38,28 +38,29 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:background="@color/colorPrimaryDark"
+        android:padding="10dp"
         android:text="Hello"
         android:textColor="#fff"
-        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
         app:layout_constraintEnd_toEndOf="@+id/first_button"
-        app:layout_constraintHorizontal_bias="0.339"
         app:layout_constraintStart_toStartOf="@+id/first_button"
         app:layout_constraintTop_toBottomOf="@+id/first_button"
-        app:layout_constraintVertical_bias="0.495" />
+        app:layout_constraintVertical_bias="0.5" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="406dp"
-        android:layout_height="231dp"
-        android:layout_gravity="end"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="52dp"
-        android:layout_marginRight="52dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginBottom="8dp"
         android:background="#fcca53"
         android:padding="19dp"
         android:text="@string/textview_hello_android"
+        app:layout_constraintBottom_toTopOf="@+id/editText"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/first_button"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="This will contain some information about the app." />
 
