--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#303f9f</color>
     <color name="colorPrimaryDark">#1a237e</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="colorComplimentary">#ffffff</color>
 </resources>
