--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
 
     <Button
-        android:id="@+id/first_button"
+        android:id="@+id/button_scroller"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
@@ -17,26 +17,31 @@
         android:background="@color/colorPrimaryDark"
         android:onClick="sayHello"
         android:padding="10dp"
-        android:text="@string/first_button"
+        android:text="@string/button_scroller"
         android:textColor="#fff"
         android:textSize="12sp"
         app:layout_constraintBottom_toTopOf="@+id/textView"
-        app:layout_constraintEnd_toStartOf="@+id/second_button"
+        app:layout_constraintEnd_toStartOf="@+id/button_counter"
         app:layout_constraintHorizontal_bias="0"
         app:layout_constraintStart_toStartOf="@+id/textView"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_chainStyle="packed" />
 
     <Button
-        android:id="@+id/second_button"
-        android:layout_width="100dp"
+        android:id="@+id/button_counter"
+        android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginTop="10dp"
+        android:layout_marginEnd="45dp"
+        android:layout_marginRight="45dp"
         android:background="@color/colorPrimaryDark"
-        android:text="Hello"
+        android:padding="10dp"
+        android:text="@string/button_counter_label"
         android:textColor="#fff"
         android:textSize="12sp"
-        app:layout_constraintEnd_toEndOf="@+id/textView"
+        android:onClick="showCounter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@string/button_scroller"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -55,7 +60,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/first_button"
+        app:layout_constraintTop_toBottomOf="@+id/button_scroller"
         tools:text="This will contain some information about the app." />
 
     <EditText
@@ -65,7 +70,7 @@
         android:layout_height="50dp"
         android:layout_marginBottom="1dp"
         android:autofillHints="username"
-        android:hint="Please enter your Username"
+        android:hint="@string/editText_hint"
         android:inputType="text"
         android:selectAllOnFocus="true"
         app:layout_constraintBottom_toBottomOf="parent"
