--- a/app/src/main/res/layout/activity_counter.xml
+++ b/app/src/main/res/layout/activity_counter.xml
@@ -20,7 +20,7 @@
         android:layout_marginBottom="64dp"
         android:background="#ffd800"
         android:gravity="center"
-        android:text="0"
+        android:text="@string/counter_initialValue"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="200sp"
         android:textStyle="bold"
@@ -77,7 +77,7 @@
         android:layout_marginTop="64dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:text="COUNTER"
+        android:text="@string/counter_heading"
         android:textAllCaps="false"
         android:textColor="#000000"
         android:textSize="36sp"
